--- a/src/components/WhatIsSkilline/Wis.css
+++ b/src/components/WhatIsSkilline/Wis.css
@@ -40,8 +40,16 @@
     cursor: pointer;
     font-size: 16px;
     font-weight: 500;
+    transition: translate(-5);
 }
-
+.feature-btn:hover {
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+    transform: translateY(-2px);
+}
+.access-code-input:hover {
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+    transform: translateY(-2px);
+}
 .access-code-input {
     font-family: var(--primary-font);
     background-color: #23BDEE; 
