--- a/src/components/WhatIsSkilline/Wis.css
+++ b/src/components/WhatIsSkilline/Wis.css
@@ -1,6 +1,6 @@
 .wis-feature-cards {
     display: flex;
-    gap: 2rem;
+    gap: 6rem;
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 3rem;
@@ -69,15 +69,18 @@
 
 .heading {
     font-family: var(--primary-font);
-    font-size: clamp(28px, 4vw, 44px);
     font-weight: 600;
     text-align: center;
-    line-height: 1.5;
+    line-height: 180%;
     color: #2F327D;
 }
-
+.heading h3{
+    font-size: clamp(28px, 4vw, 44px);
+}
 .heading span {
     color: #F48C06;
+    text-align: center;
+    font-size: clamp(28px, 4vw, 44px);
 }
 
 .description {
@@ -87,5 +90,7 @@
     font-weight: 400;
     font-size: clamp(14px, 2vw, 24px);
     max-width: 1065px;
-    margin: 1rem auto 0;
+    margin: 1rem auto ;
+    letter-spacing: 0.02em;
+    line-height: 180%;
 }
