--- a/src/components/OurFeatures/Features.css
+++ b/src/components/OurFeatures/Features.css
@@ -17,7 +17,7 @@
     color: #2F327D;
 }
 .features-section span {
-    color: #F48C06;
+    color: #696984;
 }
 .features-section p {
     /* margin: 0; */
