add the responsive layout for navbar and others

--- a/src/components/Classroom/Classroom.css
+++ b/src/components/Classroom/Classroom.css
@@ -118,3 +118,13 @@
     bottom: -23px;
     right: -23px;
 }
+@media (max-width: 992px) {
+  .classroom {
+    flex-direction: column;
+    padding: 80px 5%; 
+  }
+
+  .left-head {
+    width: auto; 
+  }
+}
